Add Aside to Home Page, as well as new CSS

--- a/index.html
+++ b/index.html
@@ -1,25 +1,35 @@
 <!DOCTYPE html>
 <html lang="en-US">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Declan Paul Ruediger | WDD 130</title>     
-		<link rel="stylesheet" href="styles/styles.css">
-	</head>
-	<body>
-		<header>
-			<nav>
-				<a href="#">Home</a>
-				<a href="wwr/">Rafting Website</a>
-			</nav>
-		</header>
-		<main>
-			<h1>Declan Paul Ruediger | WDD 130</h1>
-			<img src="images/profile.webp" alt="Declan Paul Ruediger" width="200">
-			<p>I love coding and I love people :)</p>
-		</main>
-		<footer>
-			<p>&copy;2025 | Declan Paul Ruediger | Australia</p>
-		</footer>
-	</body>
+
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Declan Paul Ruediger | WDD 130</title>
+	<meta name="description" content="Declan Ruediger's up-and-coming home page">
+	<meta name="author" content="Declan Paul Ruediger">
+	<link rel="stylesheet" href="styles/styles.css">
+</head>
+
+<body>
+	<header>
+		<nav>
+			<a href="#">Home</a>
+			<a href="wwr/">Rafting Website</a>
+		</nav>
+	</header>
+	<main>
+		<h1>Declan Paul Ruediger | WDD 130</h1>
+		<img src="images/profile.webp" alt="Declan Paul Ruediger" width="200">
+		<p>I love coding and I love people :)</p>
+	</main>
+	<aside>
+		<h2>Australia</h2>
+		<img src="images/australian-landscape.webp" alt="Panorama of Lake Moogerah in South-East Queensland, Australia. The landscape is vast and full of dry Australian brush." width="200">
+		<p>Australia is a beautiful country with lots of lovely people.</p>
+	</aside>
+	<footer>
+		<p>&copy;2025 | Declan Paul Ruediger | Australia</p>
+	</footer>
+</body>
+
 </html>
