--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Declan Paul Ruediger | WDD 130</title>
-    <meta name="author" content="Declan Paul Ruediger" />
-    <meta name="description" content="A common layout example on the web called the 'holy grail' layout." />
+    <meta name="author" content="Declan Paul Ruediger">
+    <meta name="description" content="A common layout example on the web called the 'holy grail' layout.">
 </head>
 
 <body>
