--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 	<meta name="description" content="Declan Ruediger's up-and-coming home page">
 	<meta name="author" content="Declan Paul Ruediger">
 	<link rel="stylesheet" href="styles/styles.css">
+
+	<!-- Google Fonts -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Chewy&family=Fredoka&display=swap" rel="stylesheet">
 </head>
 
 <body>
