Guided CSS updates

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -7,7 +7,7 @@
 	<title>Hinterland Rafting | About</title>
 	<meta name="description" content="Hinterland Rafting About Page">
 	<meta name="author" content="Declan Paul Ruediger">
-	<link rel="stylesheet" href="styles/styles.css">
+	<link rel="stylesheet" href="styles/rafting.css">
 
 	<!-- Google Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -27,10 +27,10 @@
 	</header>
 	<main>
         <div class="hero">
-            <img src="">
+            <img src="images/rafting_together.webp" alt="Multiple rafts in the whitewater">
             <h1>Hinterland Rafting</h1>
             <article>
-                <img src="images/smiling_rafter.webp">
+                <img src="images/smiling_rafter.webp" alt="An employee of Hinterland Rafting wearing her helmet, life jacket, and smiling broadly">
                 <p>Thrilling memories, professional service</p>
             </article>
         </div>
@@ -40,11 +40,11 @@
         </section>
         <section>
             <h2>Adventure Awaits You!</h2>
-            <img src="images/raft_falling.webp">
-            <img src="images/raft_tipping.webp">
-            <img src="images/rafting_down_whitewater.webp">
-            <img src="images/rafting_in_blue_water.webp">
-            <img src="images/rafting_in_whitewater.webp">
+            <img src="images/raft_falling.webp"             alt="people in a raft, falling">
+            <img src="images/raft_tipping.webp"             alt="people in a raft, tipping over">
+            <img src="images/rafting_down_whitewater.webp"  alt="people in a raft, going down a whitewater waterfall">
+            <img src="images/rafting_in_blue_water.webp"    alt="people in a raft, navigating beautiful blue water">
+            <img src="images/rafting_in_whitewater.webp"    alt="people in a raft, in whitewater">
         </section>
 	</main>
 	<footer>
