--- a/wwr/about.html
+++ b/wwr/about.html
@@ -50,9 +50,9 @@
 	<footer>
 		<p>&copy;2025 | Hinterland Rafting | Declan Paul Ruediger</p>
         <nav class="socialmedia">
-            <a href="https://matrix.org/"><img src="images/icons/matrix.svg" alt="Matrix"></a>
-            <a href="https://join-lemmy.org/"><img src="images/icons/lemmy.svg" alt="Lemmy"></a>
-            <a href="https://mastodon.social/explore"><img src="images/icons/mastodon.svg" alt="Mastodon"></a>
+            <a href="https://matrix.org/"><img src="images/icons/matrix.svg" alt="Matrix logo"></a>
+            <a href="https://join-lemmy.org/"><img src="images/icons/lemmy.svg" alt="Lemmy logo"></a>
+            <a href="https://mastodon.social/explore"><img src="images/icons/mastodon.svg" alt="Mastodon logo"></a>
         </nav>
     </footer>
 </body>
