--- a/wwr/about.html
+++ b/wwr/about.html
@@ -37,6 +37,7 @@
         <section>
             <h2>History</h2>
             <p>Hinterland Rafting was founded in 1706, predating european colonial influence in Australia. We have slowly become the largest shadow company in the world. Essentially none of the general populace realises we own every aspect of their lives.</p>
+            <img src="images/historic_rafting.webp" alt="A blakc and white picture of a raft in the whitewater in the 1970s">
         </section>
         <section>
             <h2>Adventure Awaits You!</h2>
