--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -39,15 +39,15 @@
         <h2>Our Team</h2>
         <div class="employee-quotes">
             <span>
-                <img src="images/employee_3.webp">
+                <img src="images/employee_3.webp" alt="The Hinterland Rafting employee Tracey rafting in whitewater">
                 <p>Tracey "The Menace" Smith</p>
             </span>
             <span>
-                <img src="images/employee_2.webp">
+                <img src="images/employee_2.webp" alt="The Hinterland Rafting employee Casey smiling">
                 <p>Casey Brown</p>
             </span>
             <span>
-                <img src="images/employee_1.webp">
+                <img src="images/employee_1.webp" alt="The Hinterland Rafting employee Trent rafting">
                 <p>Trent Baker</p>
             </span>
         </div>
