--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -17,7 +17,7 @@
 
 <body>
 	<header>
-        <img src="images/hinterland_rafting_logo.webp" alt="Hinterland Rafting Logo">
+        <img src="images/logo.webp" alt="Hinterland Rafting Logo">
 		<nav>
 			<a href="index.html">Home</a>
 			<a href="about.html">About</a>
