Fix HTML Validation

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -40,15 +40,15 @@
         <div class="employee-quotes">
             <span>
                 <img src="images/employee_3.webp" alt="The Hinterland Rafting employee Tracey rafting in whitewater">
-                <p>Tracey "The Menace" Smith</p>
+                <span>Tracey "The Menace" Smith</span>
             </span>
             <span>
                 <img src="images/employee_2.webp" alt="The Hinterland Rafting employee Casey smiling">
-                <p>Casey Brown</p>
+                <span>Casey Brown</span>
             </span>
             <span>
                 <img src="images/employee_1.webp" alt="The Hinterland Rafting employee Trent rafting">
-                <p>Trent Baker</p>
+                <span>Trent Baker</span>
             </span>
         </div>
         <form class="message-form">
@@ -56,11 +56,11 @@
             <label for="name-input">First Name: </label><input required type="text" name="name" id="name-input" placeholder="First Name"><br>
             <label for="email-input">Email: </label><input required id="email-input" type="email" name="email" placeholder="Email">
             <div>
-                <span for="message_purpose">Message<br>Purpose:</span>
+                <span>Message<br>Purpose:</span>
                 <span>
-                    <input class="radio-input" type="radio" id="radio_1" name="message_purpose" value="General Inquiry"></input><label for="radio_1"> General Inquiry</label><br>
-                    <input class="radio-input" type="radio"  id="radio_2"  name="message_purpose" value="Reservation Question" ></input><label for="radio_2"> Reservation Question</label><br>
-                    <input class="radio-input" type="radio"    id="radio_3"  name="message_purpose" value="Website Suggestion"   ></input><label for="radio_3"> Website Suggestion</label>
+                    <input class="radio-input" type="radio" id="radio_1" name="message_purpose" value="General Inquiry"><label for="radio_1"> General Inquiry</label><br>
+                    <input class="radio-input" type="radio"  id="radio_2"  name="message_purpose" value="Reservation Question" ><label for="radio_2"> Reservation Question</label><br>
+                    <input class="radio-input" type="radio"    id="radio_3"  name="message_purpose" value="Website Suggestion"   ><label for="radio_3"> Website Suggestion</label>
                 </span>
             </div>
             <label for="message_box">Message:</label><br>
