--- a/wwr/index.html
+++ b/wwr/index.html
@@ -31,69 +31,31 @@
             <h1>Hinterland Rafting</h1>
             <article>
                 <img src="images/smiling_rafter.webp" alt="An employee of Hinterland Rafting wearing her helmet, life jacket, and smiling broadly">
-                <p>Thrilling memories, professional service</p>
+                <p>Book your adventure <strong>today!</strong></p>
+                <a href="trips.html"><button>Book Now</button></a>
             </article>
         </div>
-        <section class="history">
-            <h2>History</h2>
-            <div>
-                <p>Hinterland Rafting was founded in 1706, predating european colonial influence in Australia. We have slowly become the largest shadow company in the world. Essentially none of the general populace realises we own every aspect of their lives.</p>
-                <img src="images/historic_rafting.webp" alt="A black and white picture of a raft in the whitewater in the 1970s">
-                <p>Hinterland Rafting was founded in 1706, predating european colonial influence in Australia. We have slowly become the largest shadow company in the world. Essentially none of the general populace realises we own every aspect of their lives.</p>
-            </div>
-        </section>
-        <h1>Contact Us</h1>
-        <div class="contact-info">
-            <div>
-                <p><strong>Address:     </strong>  30-38 Hardys Rd, Mudgeeraba QLD 4213     </p>
-                <p><strong>Phone Number:</strong>  0408754755                               </p>
-                <p><strong>Email:       </strong>  contact@hinterland-rafting.com           </p>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2341.5079260963275!2d153.35789384009968!3d-28.091516409429733!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b911ce480d6ddab%3A0x60bfc1550e66c68a!2sHinterland%20Regional%20Park%2C%2030-38%20Hardys%20Rd%2C%20Mudgeeraba%20QLD%204213!5e1!3m2!1sen!2sau!4v1755037201649!5m2!1sen!2sau" width="600" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
-        </div>
+        <h2>Our Team</h2>
         <div class="employee-quotes">
             <span>
-                <img src="smiling_rafter.webp">
-                <p>Casey Brown</p>
+                <img src="images/employee_3.webp" alt="The Hinterland Rafting employee Tracey rafting in whitewater">
+                <span>Tracey "The Menace" Smith</span>
             </span>
             <span>
-                <img src="smiling_rafter.webp">
-                <p>Casey Baker</p>
+                <img src="images/employee_2.webp" alt="The Hinterland Rafting employee Casey smiling">
+                <span>Casey Brown</span>
             </span>
             <span>
-                <img src="smiling_rafter.webp">
-                <p>Casey Smith</p>
+                <img src="images/employee_1.webp" alt="The Hinterland Rafting employee Trent rafting">
+                <span>Trent Baker</span>
             </span>
         </div>
         <form class="message-form">
-            <input required type="text" name="name" placeholder="First Name">
-            <input required type="email" name="email" placeholder="Email">
-            <input required type="label" name="message_purpose" placeholder="First Name">
-            <div>
-                <span for="message_purpose">Message purpose:</span>
-                <span>
-                    <input type="radio" id="radio_1" name="message_purpose" value="General Inquiry"></input><label for="radio_1"> General Inquiry</label><br>
-                    <input type="radio"  id="radio_2"  name="message_purpose" value="Reservation Question" ></input><label for="radio_2"> Reservation Question</label><br>
-                    <input type="radio"    id="radio_3"  name="message_purpose" value="Website Suggestion"   ></input><label for="radio_3"> Website Suggestion</label>
-                </span>
-            </div>
-            <textarea name="message_text">
-
-            </textarea>
-            <label for="subscribe">Please subscribe me to the monthly newsletter</label>
-            <input required type="checkbox" name="subscribe" id="subscribe">
-            <input required type="text" name="name" placeholder="First Name">
-            <input required type="text" name="name" placeholder="First Name">
-            
+            <h2>E-Newsletter Sign-up</h2>
+            <label for="name-input">First Name: </label><input required type="text" name="name" id="name-input" placeholder="First Name"><br>
+            <label for="email-input">Email: </label><input required id="email-input" type="email" name="email" placeholder="Email"><br>
+            <button type="submit">Sign me up!</button>
         </form>
-        <section class="history">
-            <h2>History</h2>
-            <div>
-                <p>Hinterland Rafting was founded in 1706, predating european colonial influence in Australia. We have slowly become the largest shadow company in the world. Essentially none of the general populace realises we own every aspect of their lives.</p>
-                <img src="images/historic_rafting.webp" alt="A black and white picture of a raft in the whitewater in the 1970s">
-                <p>Hinterland Rafting was founded in 1706, predating european colonial influence in Australia. We have slowly become the largest shadow company in the world. Essentially none of the general populace realises we own every aspect of their lives.</p>
-            </div>
-        </section>
 	</main>
 	<footer>
         <nav class="socialmedia">
