--- a/wwr/index.html
+++ b/wwr/index.html
@@ -14,7 +14,6 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Chewy&family=Fredoka&display=swap" rel="stylesheet">
 </head>
-
 <body>
 	<header>
         <img src="images/logo.webp" alt="Hinterland Rafting Logo">
@@ -35,23 +34,16 @@
                 <a href="trips.html"><button>Book Now</button></a>
             </article>
         </div>
-        <h2>Our Team</h2>
-        <div class="employee-quotes">
-            <span>
-                <img src="images/employee_3.webp" alt="The Hinterland Rafting employee Tracey rafting in whitewater">
-                <span>Tracey "The Menace" Smith</span>
-            </span>
-            <span>
-                <img src="images/employee_2.webp" alt="The Hinterland Rafting employee Casey smiling">
-                <span>Casey Brown</span>
-            </span>
-            <span>
-                <img src="images/employee_1.webp" alt="The Hinterland Rafting employee Trent rafting">
-                <span>Trent Baker</span>
-            </span>
+        <div class="center-children">
+            <div class="info-grid">
+                <img src="images/raft_falling.webp" alt="people in a raft, falling">
+                <span>We offer excellent and fun adventures for everyone!</span>
+                <img src="images/raft_tipping.webp" alt="people in a raft, tipping over">
+                <span>Book a Trip today - we will keep you safe from the mishaps of the unexperienced!</span>
+            </div>
         </div>
         <form class="message-form">
-            <h2>E-Newsletter Sign-up</h2>
+            <h2>Not Ready<br>for a Trip Yet?<br>Sign-up for the E-Newsletter!</h2>
             <label for="name-input">First Name: </label><input required type="text" name="name" id="name-input" placeholder="First Name"><br>
             <label for="email-input">Email: </label><input required id="email-input" type="email" name="email" placeholder="Email"><br>
             <button type="submit">Sign me up!</button>
