--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -4,8 +4,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Hinterland Rafting | Trips</title>
-	<meta name="description" content="Upcoming Trip info!">
+	<title>Hinterland Rafting | Book a Trip!</title>
+	<meta name="description" content="Upcoming Trip info for Hinterland Rafting!">
 	<meta name="author" content="Declan Paul Ruediger">
 	<link rel="stylesheet" href="styles/rafting.css">
 
