--- a/wwr/about.html
+++ b/wwr/about.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Hinterland Rafting | About</title>
-	<meta name="description" content="Hinterland Rafting About Page">
+	<meta name="description" content="About Us at Hinterland Rafting">
 	<meta name="author" content="Declan Paul Ruediger">
 	<link rel="stylesheet" href="styles/rafting.css">
 
