--- a/wwr/index.html
+++ b/wwr/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Hinterland Rafting | Home</title>
-	<meta name="description" content="Thrilling memories, professional service">
+	<meta name="description" content="Start here for your rafting adventure!">
 	<meta name="author" content="Declan Paul Ruediger">
 	<link rel="stylesheet" href="styles/rafting.css">
 
@@ -36,9 +36,9 @@
         </div>
         <div class="center-children">
             <div class="info-grid">
-                <img src="images/raft_falling.webp" alt="people in a raft, falling">
+                <img src="images/home_info_2.webp" alt="people in a raft, falling">
                 <span>We offer excellent and fun adventures for everyone!</span>
-                <img src="images/raft_tipping.webp" alt="people in a raft, tipping over">
+                <img src="images/home_info_1.webp" alt="people in a raft, tipping over">
                 <span>Book a Trip today - we will keep you safe from the mishaps of the unexperienced!</span>
             </div>
         </div>
