--- a/wwr/index.html
+++ b/wwr/index.html
@@ -43,10 +43,18 @@
             </div>
         </div>
         <form class="message-form">
-            <h2>Not Ready<br>for a Trip Yet?<br>Sign-up for the E-Newsletter!</h2>
-            <label for="name-input">First Name: </label><input required type="text" name="name" id="name-input" placeholder="First Name"><br>
-            <label for="email-input">Email: </label><input required id="email-input" type="email" name="email" placeholder="Email"><br>
-            <button type="submit">Sign me up!</button>
+            <h2>E-Newsletter Sign-up</h2>
+            <p>Not Ready for a Trip Yet?<br>Sign-up for updates!</p>
+            <div>
+                <div><label for="name-input">First Name: </label><input required type="text" name="name" id="name-input"
+                        placeholder="First Name">
+                </div>
+                <div>
+                    <label for="email-input">Email: </label><input required id="email-input" type="email" name="email"
+                        placeholder="Email">
+                </div>
+                <button type="submit">Sign me up!</button>
+            </div>
         </form>
 	</main>
 	<footer>
