--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -35,28 +35,52 @@
                 <a href="contact.html"><button>Contact Us</button></a>
             </article>
         </div>
-        <div class="center-children">
-            <div class="info-grid">
-                <img src="images/home_info_2.webp" alt="people in a raft, falling">
-                <span>We offer excellent and fun adventures for everyone!</span>
-                <img src="images/home_info_1.webp" alt="people in a raft, tipping over">
-                <span>Book a Trip today - we will keep you safe from the mishaps of the unexperienced!</span>
+        <div class="trip-info-flex">
+            <div class="rounded-background-box featured-trips-box">
+                <h3>Featured Trips</h3>
+                <div class="info-grid">
+                    <img src="images/home_info_2.webp" alt="people in a raft, falling">
+                    <span>Date: 27th Jan 2026<br>Time: 3pm - 7pm</span>
+                    <img src="images/home_info_1.webp" alt="people in a raft, tipping over">
+                    <span>Date: 27th Jan 2026<br>Time: 3pm - 7pm</span>
+                    <img src="images/rafting_in_blue_water.webp" alt="people in a raft, tipping over">
+                    <span>Date: 29th Jan 2026<br>Time: 3pm - 7pm</span>
+                </div>
+            </div>
+            <div class="rounded-background-box">
+            <h3>More Trip Info</h3>
+            <table>
+                <tr>
+                    <th>Time</th>
+                    <th>Date</th>
+                </tr>
+                <tr>
+                    <td>12pm - 4pm</td>
+                    <td>31st Mar 2026</td>
+                </tr>
+                <tr>
+                    <td>12pm - 4pm</td>
+                    <td>23rd Jun 2026</td>
+                </tr>
+                <tr>
+                    <td>12pm - 4pm</td>
+                    <td>12th Jul 2026</td>
+                </tr>
+                <tr>
+                    <td>12pm - 4pm</td>
+                    <td>31st Jul 2026</td>
+                </tr>
+                <tr>
+                    <td>12pm - 4pm</td>
+                    <td>23rd Sep 2026</td>
+                </tr>
+                <tr>
+                    <td>12pm - 4pm</td>
+                    <td>12th Oct 2026</td>
+                </tr>
+            </table>
             </div>
         </div>
-        <form class="message-form">
-            <h2>E-Newsletter Sign-up</h2>
-            <p>Not Ready for a Trip Yet?<br>Sign-up for updates!</p>
-            <div>
-                <div><label for="name-input">First Name: </label><input required type="text" name="name" id="name-input"
-                        placeholder="First Name">
-                </div>
-                <div>
-                    <label for="email-input">Email: </label><input required id="email-input" type="email" name="email"
-                        placeholder="Email">
-                </div>
-                <button type="submit">Sign me up!</button>
-            </div>
-        </form>
 	</main>
 	<footer>
         <nav class="socialmedia">
