Final touches of all

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -31,7 +31,7 @@
             <article>
                 <img src="images/smiling_rafter.webp" alt="An employee of Hinterland Rafting wearing her helmet, life jacket, and smiling broadly">
                 <p>Book your adventure <strong>today!</strong></p>
-                <a href="trips.html"><button>Book Now</button></a>
+                <button><a href="trips.html">Book Now</a></button>
             </article>
         </div>
         <div class="center-children">
