--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -32,7 +32,7 @@
             <article>
                 <img src="images/smiling_rafter.webp" alt="An employee of Hinterland Rafting wearing her helmet, life jacket, and smiling broadly">
                 <p>Contact us <strong>today!</strong></p>
-                <a href="contact.html"><button>Contact Us</button></a>
+                <button><a href="contact.html">Contact Us</a></button>
             </article>
         </div>
         <div class="trip-info-flex">
